modified swagger documentation
